--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -24,47 +24,39 @@ body {
     
 header {
   background-color: #7e6739;
-  padding: 1rem 1.5rem;
   display: flex;
-
   flex-direction: row;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: center;
+padding-right: 2em;
+padding-left: 2em;
 
 }
  
-.header div a  {
-  align-items: center;
-  
-}
-
-     header h1 {
-      font-size: 2rem;
-      font-weight: bolder;
-        margin-left: 0.5rem;
-        text-align: left;    
-      } 
+header h1 {
+  font-size: 1rem;
+  color: rgb(71, 69, 69);
+  text-align: right; 
+    
+} 
      
 
 header a {
-  font-size: 2rem;
-  font-weight: bold;
-   color: rgb(80, 59, 8);
-  text-decoration: none;}
- 
-  
-  
-
-h {
-    font-size:3rem;
-    color: rgb(53, 46, 26);
-     align-items: center;
-     text-align: ;
+  text-decoration: none;
 }
+ 
+
+header h2 {
+  font-size:2rem;
+  color: rgb(68, 58, 31);
+  align-items: center;
+  text-align: left;
+}
+
 p1{
   margin-right: 55rem;
   font-size: 70%;
-  color: rgb(53, 46, 26);
+  color: rgb(90, 86, 74);
    
 }
 
