--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,25 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;600&display=swap');
 
-
-
-
 body {
 
-        font-family: sans-serif;
+    font-family: sans-serif;
     color: rgb(240, 241, 214);
     background: linear-gradient(to right, #bab8aa 0%, #917543 100%);
     font-weight: 500;
     font-style: normal;
-      text-align: center;
-      font-size: 30;
-  
-      max-width: auto;
-      height: auto;
-      margin-top: 1em;
-      margin-bottom: 1em;
-      margin-right: auto;
-      margin-left: auto;
-      align-items: center; 
+    text-align: center;
+    font-size: 30;
+    max-width: auto;
+    height: auto;
+    margin-top: 1em;    
+    margin-bottom: 1em;
+    margin-right: auto;
+    margin-left: auto;
+    align-items: center; 
 }
     
 header {
@@ -28,39 +24,34 @@ header {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-padding-right: 2em;
-padding-left: 2em;
-color: rgb(59, 50, 24);
-text-shadow: #555555;
+  padding-right: 2em;
+  padding-left: 2em;
+  margin-bottom: 10em;
 }
  
 header h1 {
+  display: grid;
   font-size: 1rem;
-  color: rgb(71, 69, 69);
+  color:black;
   text-align: right; 
-    
 } 
      
-
 header a {
-  text-decoration: none;
-  
+  text-decoration: none; 
 }
  
-
 header h2 {
   font-size:2rem;
-  font-family:'rubik';
-color:rgb(59, 42, 18);
+  color:rgb(59, 42, 18);
   align-items: center;
   text-align: left;
 }
 
-p1{
-  margin-right: 55rem;
-  font-size: 70%;
-  color: rgb(90, 86, 74);
-   
+ header p2 {
+  display: grid;
+  grid-template-columns: 11em 0em 0em 11em;
+  color: grey;
+  font-size: 1rem;
 }
 
 img{
@@ -68,13 +59,17 @@ img{
     height:auto;
    
 }
+p1{
+  margin-right: 55rem;
+  font-size: 70%;
+  color: rgb(90, 86, 74);
+}
 
 p{
     font-size: 80%;
    color: rgb(53, 46, 26);
     align-items: center;
     text-align: center;   
-
 }
 
 a {
@@ -90,8 +85,8 @@ a:hover {
 ul {
   font-size: 50%;
   list-style-type: none;
-  margin: 0;
-  padding: 10px;
+  margin: 11,0,0,15em;
+  padding: 2px;
   overflow: hidden;
   background-color:none;
   display: flex;
@@ -130,28 +125,13 @@ li a, .dropbtn {
   text-decoration: none;
   display: block;
   text-align: center;
-  
-  
 }
-
-.dropdown-content a:hover {background-color: #aa956f;}
 
 .dropdown:hover .dropdown-content {
   display: block;
 }
 
-footer {
-    color:#cdb60b;
-    font-size: 60%;
-    text-align: center;  
-    margin-top: 20em;     
-  }
-  
-  footer hr {
-    border: none;
-    border-top: 1px dashed hsl(40, 92%, 20%);
-    margin: 1em auto;
-  }
+
 
   form > div {
     display: flex;
@@ -271,8 +251,8 @@ footer {
     background : linear-gradient(to right, #3f3d2c 0%, #6a6e71 ,#a9a588 100%);
     padding: 10px;
     grid-template-columns: 1fr 1fr 1fr;
-    margin-left: 20em;
-    margin-right: 20em;
+    margin-left: 15em;
+    margin-right: 15em;
     margin-top: 1em;
   }
   .tapahtumat > div > div:nth-child(3) {
@@ -282,4 +262,17 @@ footer {
   .tapahtumat > div {
     display: flex;
     justify-content: space-between;
+  }
+
+  footer {
+    color:#cdb60b;
+    font-size: 60%;
+    text-align: center;  
+    margin-top: 20em;     
+  }
+  
+  footer hr {
+    border: none;
+    border-top: 1px dashed hsl(40, 92%, 20%);
+    margin: 1em auto;
   }
