--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,15 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;600&display=swap');
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+html {
+  font-family: 'Rubik', sans-serif;
+  background: rgb(95, 72, 1);
+  background: linear-gradient(to right, #686762 0%, #9d9486 100%);;
+}
 
 body {
 
     font-family: sans-serif;
-    color: rgb(240, 241, 214);
+    color: rgb(39, 39, 37);
     background: linear-gradient(to right, #bab8aa 0%, #917543 100%);
     font-weight: 500;
     font-style: normal;
     text-align: center;
-    font-size: 30;
-    max-width: auto;
+    max-width: 75%;
     height: auto;
     margin-top: 1em;    
     margin-bottom: 1em;
@@ -22,11 +31,9 @@ header {
   background-color: #7e6739;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+
   align-items: center;
-  padding-right: 1em;
-  padding-left: 1em;
-  margin-bottom: 10em;
+  margin-bottom: 8em;
 }
  
 header h1 {
@@ -49,26 +56,26 @@ header h2 {
 
  header p2 {
   display: grid;
-  grid-template-columns: 12em 0em 0em 12em;
-  color: grey;
+  grid-template-columns: 8em 0em 0em 10em;
+  color: rgb(111, 108, 108);
   font-size: 1rem;
   margin-right:20;
 }
 
 img{
-    width:50%;
+    width:60%;
     height:auto;
    
 }
 p1{
   margin-right: 55rem;
-  font-size: 70%;
+  font-size: 2rem;
   color: rgb(90, 86, 74);
 
 }
 
 p{
-    font-size: 80%;
+    font-size: 2rem;
    color: rgb(53, 46, 26);
     align-items: center;
     text-align: center;   
@@ -81,19 +88,15 @@ a:hover {
 }
  
 ul {
-  font-size: 50%;
+  font-size: 2rem;
   list-style-type: none;
-  margin: 11,0,0,20em;
-  padding: 2px;
   overflow: hidden;
   background-color:none;
   display: flex;
-  justify-content: space-around;
   flex-direction: row;
   margin-top: -0.4rem;
-  text-align: center;
-  align-items: center;
   max-width: auto;
+  
 }
 
 li a, .dropbtn {
@@ -108,14 +111,12 @@ li a, .dropbtn {
   display: none;
   position: absolute;
   background-color: none;
-  min-width: auto;
-  z-index: 1;
   align-items: center;
-  max-width: auto;
+  
 }
 .dropdown-content a {
   color:none;
-  padding: 18px 10px;
+
   text-decoration: none;
   display: block;
   text-align: center;
@@ -262,7 +263,8 @@ li a, .dropbtn {
     color:#cdb60b;
     font-size: 60%;
     text-align: center;  
-    margin-top: 20em;     
+    margin-top: 20em;
+    margin-bottom: 10rem;     
   }
   
   footer hr {
