--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,9 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;600&display=swap');
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
+
+
+
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;600&display=swap');
+
+  
+
 html {
   font-family: 'Rubik', sans-serif;
   background: rgb(0,34,0);
@@ -21,38 +27,50 @@ body {
     text-align: center;
     width:90%;
     max-width: auto;
-    height: auto;
-    margin-top: 1em;    
+    min-height: 100vh;
+    margin-top: 3em;    
     margin-bottom: 1em;
     margin-right: auto;
     margin-left: auto;
     align-items: center; 
 }
 img{
+
   width:60%;
   height:auto;
 }
+
 h1{
+
   font-size: 2rem;
 }
+
 h2{
+
   font-size: 2rem;
 }
-h3{
-  font-size: 2rem;
+
+div {
+ 
+  color: wheat;
+  font-size: 1rem;
 }
+
+div a {
+  text-decoration: none;
+}
+
 p{
-  font-size: 2rem;
- color: rgb(53, 46, 26);
+  font-size: 1rem;
+  color: rgb(53, 46, 26);
   align-items: center;
   text-align: center;   
 }
     
 header {
-  background-color: #7d6e50;
+  background-color: #746a58;
   align-items: center;
-  margin-bottom: 8em;
-  padding: 2,2,2,2rem;
+  margin-bottom: 3em;
 }
  
 header h1 {
@@ -64,74 +82,55 @@ header h1 {
 } 
      
 header a {
-  text-decoration: none; 
+text-decoration: none; 
+ padding: 1em;
 }
  
 header h2 {
-  font-size:2rem;
-  color:rgb(59, 42, 18);
-  align-items: center;
-  text-align: left;
-  font-weight: bold;
+font-size:2rem;
+color:rgb(41, 40, 39);
+text-align: left;
+font-weight: bold;
 }
 
 a {
-    color: rgb(53, 46, 26);  
+color: rgb(53, 46, 26);  
 }
 a:hover {
-    color: #873131
+color: #873131
 }
  nav ul {
   
-  display: inline-grid;
-  flex-direction: column;
-justify-content:flex-end;
-margin-top: -10em;
-  color: rgb(111, 108, 108);
-  font-size: 1rem;
+display: flex;
+flex-direction: row;
+justify-content:center;
+color: rgb(111, 108, 108);
+font-size: 1rem;
  }
 
 ul {
   font-size: 2rem;
-  list-style-type: none;
-  overflow: hidden;
-  background-color:none;
-  display: flex;
-  flex-direction: column;
-  justify-content:flex-end;
-  max-width: auto;
-  
-}
-nav ul ul {
-  display: none;
-  position:absolute;
+
+
 }
 li a, .dropbtn {
-  display: inline-block;
-  position:relative;
+
+  justify-content: center;
   color: rgb(62, 60, 60);
   text-align: center;
-  padding: 8px 10px;
   text-decoration: none;
 }
 
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: none;
-  align-items: center;
-  
-}
+
 .dropdown-content a {
   color:none;
-
   text-decoration: none;
   display: block;
   text-align: center;
 }
 
 .dropdown:hover .dropdown-content {
-  display: block;
+display: block;
 }
 
 
@@ -171,8 +170,9 @@ li a, .dropbtn {
     border-radius: 1rem;
     border-left:none;
     border-right: none;
+    border-width: 40%;
     padding: 1rem;
-    margin: 5rem;
+    margin: 10,5,5,10rem;
     text-align: center;
   }
   
@@ -192,60 +192,7 @@ li a, .dropbtn {
       margin-top: 2em;
     }
     
-  table {
-    max-width: 768px;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-    margin:  auto;
-    border-collapse: collapse;
-    align-items: center;
 
-  }
-  
-  th, td {
-    font-size: 60%;
-    padding: 1px;
-    border: 1px solid #ddd;
-    text-align: center;
-    border-collapse: collapse;
-  }
-  
-  th {
-    background-color: #b9a964;
-    color: rgb(90, 81, 81);
-  }
-  
-  tr:nth-child(even) {
-    background-color: #8f7b5d;
-  }
-  
-  tr:hover {
-    background-color: #787040;
-  }
-  
-  div tr:hover{
-    background-color: #4b0645;
-  }
-  
-
-  div th, td {
-    padding: 4px;
-    border: 1px solid #204f44;
-    border-radius: 0.3rem;
-    border-bottom: 3px solid grey;
-    text-align: center;
-    border-collapse: collapse;
-  }
-  
-  div th {
-    background-color: #e6d2e6;
-    color: rgb(23, 21, 23);
-  }
-  
-  div tr:nth-child(even) {
-    background-color: #ab97a3;
-  }
   .tapahtumat > div {
    
     display: grid;
@@ -267,6 +214,11 @@ li a, .dropbtn {
     justify-content: space-between;
   }
 
+  .teatterit div a {
+    
+    text-decoration: none;
+  }
+
   footer {
     color:#cdb60b;
     font-size: 80%;
@@ -274,7 +226,7 @@ li a, .dropbtn {
     margin-top: 20em;
     margin-bottom: 10rem;     
     padding-bottom: 3rem;
-    padding-top: 3rem;
+    padding-top: 70rem;
   }
   
   footer hr {
